--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "IQTHON Armanthon
-  "description": "اهلا بك في ارمن ثون { @iqthon }",
+  "name": "XXU7U Armanthon
+  "description": "اهلا بك في ارمن ثون { @XXU7U}",
   "logo": "https://telegra.ph/file/aa0ee1b06ddcdcb40189a.jpg",
   "keywords": ["plugin","modular","productivity"],
   "repository": "https://github.com/help-iq2/telethon",
